src/it/emarolab/cagg/core/language/parser/ANTLRInterface/ANTLRGenerated/CAGGSyntaxDefinitionParser.java
// Generated from CAGGSyntaxDefinition.g4 by ANTLR 4.4
  package it.emarolab.cagg.core.language.parser.ANTLRInterface.ANTLRGenerated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CAGGSyntaxDefinitionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__23=1, T__22=2, T__21=3, T__20=4, T__19=5, T__18=6, T__17=7, T__16=8, 
		T__15=9, T__14=10, T__13=11, T__12=12, T__11=13, T__10=14, T__9=15, T__8=16, 
		T__7=17, T__6=18, T__5=19, T__4=20, T__3=21, T__2=22, T__1=23, T__0=24, 
		GRAMMAR_HEADER=25, COMMENT=26, MULTILINE_COMMENT=27, INTEGER=28, IDENT=29, 
		WS=30, TAG_LITERAL=31, RULE_LITERAL=32, STRING_LITERAL=33, BRACKETS=34;
	public static final String[] tokenNames = {
		"<INVALID>", "'!repeat'", "'!pronounce'", "'!language'", "'!start'", "':'", 
		"'!export'", "'{'", "'['", "';'", "'|'", "'}'", "']'", "'!modifiable'", 
		"'^'", "'!activatable'", "'!import'", "'!label'", "'('", "')'", "'!action'", 
		"'!id'", "','", "'!grammar'", "'!optional'", "GRAMMAR_HEADER", "COMMENT", 
		"MULTILINE_COMMENT", "INTEGER", "IDENT", "WS", "TAG_LITERAL", "RULE_LITERAL", 
		"STRING_LITERAL", "BRACKETS"
	};
	public static final int
		RULE_nuanceGrammar = 0, RULE_grammarHearder = 1, RULE_preamble = 2, RULE_grammarDeclaration = 3, 
		RULE_languageDeclaration = 4, RULE_exportDeclaration = 5, RULE_startDeclaration = 6, 
		RULE_importDeclaration = 7, RULE_modifableDeclaration = 8, RULE_activableDeclaration = 9, 
		RULE_pronounceDeclaration = 10, RULE_pronunceLabel = 11, RULE_ruleDeclaration = 12, 
		RULE_body = 13, RULE_ruleBody = 14, RULE_ruleTerm = 15, RULE_andOperator = 16, 
		RULE_orOperator = 17, RULE_ruleExpression = 18, RULE_actionDefinition = 19, 
		RULE_ruleDirective = 20, RULE_labelDirective = 21, RULE_idDirective = 22, 
		RULE_actionDirective = 23, RULE_pronounceDirective = 24, RULE_optionalDirective = 25, 
		RULE_repeatDirective = 26;
	public static final String[] ruleNames = {
		"nuanceGrammar", "grammarHearder", "preamble", "grammarDeclaration", "languageDeclaration", 
		"exportDeclaration", "startDeclaration", "importDeclaration", "modifableDeclaration", 
		"activableDeclaration", "pronounceDeclaration", "pronunceLabel", "ruleDeclaration", 
		"body", "ruleBody", "ruleTerm", "andOperator", "orOperator", "ruleExpression", 
		"actionDefinition", "ruleDirective", "labelDirective", "idDirective", 
		"actionDirective", "pronounceDirective", "optionalDirective", "repeatDirective"
	};

	@Override
	public String getGrammarFileName() { return "CAGGSyntaxDefinition.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CAGGSyntaxDefinitionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class NuanceGrammarContext extends ParserRuleContext {
		public PreambleContext preamble(int i) {
			return getRuleContext(PreambleContext.class,i);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public List<PreambleContext> preamble() {
			return getRuleContexts(PreambleContext.class);
		}
		public TerminalNode EOF() { return getToken(CAGGSyntaxDefinitionParser.EOF, 0); }
		public GrammarHearderContext grammarHearder() {
			return getRuleContext(GrammarHearderContext.class,0);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public NuanceGrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nuanceGrammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterNuanceGrammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitNuanceGrammar(this);
		}
	}

	public final NuanceGrammarContext nuanceGrammar() throws RecognitionException {
		NuanceGrammarContext _localctx = new NuanceGrammarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_nuanceGrammar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); grammarHearder();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__22) | (1L << T__21) | (1L << T__20) | (1L << T__18) | (1L << T__11) | (1L << T__9) | (1L << T__8) | (1L << T__1))) != 0)) {
				{
				{
				setState(55); preamble();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RULE_LITERAL) {
				{
				{
				setState(61); body();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarHearderContext extends ParserRuleContext {
		public TerminalNode GRAMMAR_HEADER() { return getToken(CAGGSyntaxDefinitionParser.GRAMMAR_HEADER, 0); }
		public GrammarHearderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarHearder; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterGrammarHearder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitGrammarHearder(this);
		}
	}

	public final GrammarHearderContext grammarHearder() throws RecognitionException {
		GrammarHearderContext _localctx = new GrammarHearderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarHearder);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(GRAMMAR_HEADER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreambleContext extends ParserRuleContext {
		public LanguageDeclarationContext languageDeclaration() {
			return getRuleContext(LanguageDeclarationContext.class,0);
		}
		public ModifableDeclarationContext modifableDeclaration() {
			return getRuleContext(ModifableDeclarationContext.class,0);
		}
		public ImportDeclarationContext importDeclaration() {
			return getRuleContext(ImportDeclarationContext.class,0);
		}
		public ActivableDeclarationContext activableDeclaration() {
			return getRuleContext(ActivableDeclarationContext.class,0);
		}
		public PronounceDeclarationContext pronounceDeclaration() {
			return getRuleContext(PronounceDeclarationContext.class,0);
		}
		public ExportDeclarationContext exportDeclaration() {
			return getRuleContext(ExportDeclarationContext.class,0);
		}
		public StartDeclarationContext startDeclaration() {
			return getRuleContext(StartDeclarationContext.class,0);
		}
		public GrammarDeclarationContext grammarDeclaration() {
			return getRuleContext(GrammarDeclarationContext.class,0);
		}
		public PreambleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preamble; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterPreamble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitPreamble(this);
		}
	}

	public final PreambleContext preamble() throws RecognitionException {
		PreambleContext _localctx = new PreambleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_preamble);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(71); grammarDeclaration();
				}
				break;
			case T__21:
				{
				setState(72); languageDeclaration();
				}
				break;
			case T__18:
				{
				setState(73); exportDeclaration();
				}
				break;
			case T__8:
				{
				setState(74); importDeclaration();
				}
				break;
			case T__20:
				{
				setState(75); startDeclaration();
				}
				break;
			case T__9:
				{
				setState(76); activableDeclaration();
				}
				break;
			case T__11:
				{
				setState(77); modifableDeclaration();
				}
				break;
			case T__22:
				{
				setState(78); pronounceDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(81); match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarDeclarationContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(CAGGSyntaxDefinitionParser.STRING_LITERAL, 0); }
		public TerminalNode IDENT() { return getToken(CAGGSyntaxDefinitionParser.IDENT, 0); }
		public GrammarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterGrammarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitGrammarDeclaration(this);
		}
	}

	public final GrammarDeclarationContext grammarDeclaration() throws RecognitionException {
		GrammarDeclarationContext _localctx = new GrammarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_grammarDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(T__1);
			setState(84);
			_la = _input.LA(1);
			if ( !(_la==IDENT || _la==STRING_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LanguageDeclarationContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(CAGGSyntaxDefinitionParser.STRING_LITERAL, 0); }
		public TerminalNode IDENT() { return getToken(CAGGSyntaxDefinitionParser.IDENT, 0); }
		public LanguageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_languageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterLanguageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitLanguageDeclaration(this);
		}
	}

	public final LanguageDeclarationContext languageDeclaration() throws RecognitionException {
		LanguageDeclarationContext _localctx = new LanguageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_languageDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); match(T__21);
			setState(87);
			_la = _input.LA(1);
			if ( !(_la==IDENT || _la==STRING_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportDeclarationContext extends ParserRuleContext {
		public RuleDeclarationContext ruleDeclaration() {
			return getRuleContext(RuleDeclarationContext.class,0);
		}
		public ExportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterExportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitExportDeclaration(this);
		}
	}

	public final ExportDeclarationContext exportDeclaration() throws RecognitionException {
		ExportDeclarationContext _localctx = new ExportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exportDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); match(T__18);
			setState(90); ruleDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartDeclarationContext extends ParserRuleContext {
		public RuleDeclarationContext ruleDeclaration() {
			return getRuleContext(RuleDeclarationContext.class,0);
		}
		public StartDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterStartDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitStartDeclaration(this);
		}
	}

	public final StartDeclarationContext startDeclaration() throws RecognitionException {
		StartDeclarationContext _localctx = new StartDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_startDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(T__20);
			setState(93); ruleDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public RuleDeclarationContext ruleDeclaration() {
			return getRuleContext(RuleDeclarationContext.class,0);
		}
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitImportDeclaration(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_importDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); match(T__8);
			setState(96); ruleDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModifableDeclarationContext extends ParserRuleContext {
		public RuleDeclarationContext ruleDeclaration(int i) {
			return getRuleContext(RuleDeclarationContext.class,i);
		}
		public List<RuleDeclarationContext> ruleDeclaration() {
			return getRuleContexts(RuleDeclarationContext.class);
		}
		public ModifableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modifableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterModifableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitModifableDeclaration(this);
		}
	}

	public final ModifableDeclarationContext modifableDeclaration() throws RecognitionException {
		ModifableDeclarationContext _localctx = new ModifableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_modifableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(T__11);
			setState(99); ruleDeclaration();
			setState(100); ruleDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActivableDeclarationContext extends ParserRuleContext {
		public RuleDeclarationContext ruleDeclaration(int i) {
			return getRuleContext(RuleDeclarationContext.class,i);
		}
		public List<RuleDeclarationContext> ruleDeclaration() {
			return getRuleContexts(RuleDeclarationContext.class);
		}
		public ActivableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterActivableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitActivableDeclaration(this);
		}
	}

	public final ActivableDeclarationContext activableDeclaration() throws RecognitionException {
		ActivableDeclarationContext _localctx = new ActivableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_activableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(T__9);
			setState(103); ruleDeclaration();
			setState(104); ruleDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PronounceDeclarationContext extends ParserRuleContext {
		public PronunceLabelContext pronunceLabel() {
			return getRuleContext(PronunceLabelContext.class,0);
		}
		public RuleExpressionContext ruleExpression() {
			return getRuleContext(RuleExpressionContext.class,0);
		}
		public PronounceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pronounceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterPronounceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitPronounceDeclaration(this);
		}
	}

	public final PronounceDeclarationContext pronounceDeclaration() throws RecognitionException {
		PronounceDeclarationContext _localctx = new PronounceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pronounceDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(T__22);
			setState(107); pronunceLabel();
			setState(108); ruleExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PronunceLabelContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(CAGGSyntaxDefinitionParser.STRING_LITERAL, 0); }
		public TerminalNode IDENT(int i) {
			return getToken(CAGGSyntaxDefinitionParser.IDENT, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(CAGGSyntaxDefinitionParser.IDENT); }
		public PronunceLabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pronunceLabel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterPronunceLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitPronunceLabel(this);
		}
	}

	public final PronunceLabelContext pronunceLabel() throws RecognitionException {
		PronunceLabelContext _localctx = new PronunceLabelContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pronunceLabel);
		try {
			int _alt;
			setState(117);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110); match(STRING_LITERAL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(111); match(IDENT);
						}
						} 
					}
					setState(116);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleDeclarationContext extends ParserRuleContext {
		public TerminalNode RULE_LITERAL() { return getToken(CAGGSyntaxDefinitionParser.RULE_LITERAL, 0); }
		public RuleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterRuleDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitRuleDeclaration(this);
		}
	}

	public final RuleDeclarationContext ruleDeclaration() throws RecognitionException {
		RuleDeclarationContext _localctx = new RuleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ruleDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(RULE_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public RuleBodyContext ruleBody() {
			return getRuleContext(RuleBodyContext.class,0);
		}
		public RuleDeclarationContext ruleDeclaration() {
			return getRuleContext(RuleDeclarationContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CAGGSyntaxDefinitionListener ) ((CAGGSyntaxDefinitionListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); ruleDeclaration();
			setState(122); match(T__19);
			setState(123); ruleBody();
			setState(124); match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
